src/tree-sitter-kero/test/corpus/binary_expression.txt
===
Binary expression - equal
===

true == true

---

(module
  (binary_expression
    (true)
    (true)
  )
)

===
Binary expression - not equal
===

true != true

---

(module
  (binary_expression
    (true)
    (true)
  )
)

===
Binary expression - logical and
===

true && true

---

(module
  (binary_expression
    (true)
    (true)
  )
)

===
Binary expression - logical or
===

true || true

---

(module
  (binary_expression
    (true)
    (true)
  )
)

===
Binary expression - logical and, equal
===

true && true == true

---

(module
  (binary_expression
    (true)
    (binary_expression
      (true)
      (true)
    )
  )
)

===
Binary expression - logical or, logical and
===

true || true && true

---

(module
  (binary_expression
    (true)
    (binary_expression
      (true)
      (true)
    )
  )
)
