src/tree-sitter-kero/test/corpus/call_expression.txt
===
Call expression - no parameters
===

a()

---

(module
  (call_expression
    (identifier)
  )
)

===
Call expression - one parameter
===

a(true)

---

(module
  (call_expression
    (identifier)
    (true)
  )
)

===
Call expression - two parameter
===

a(true, true)

---

(module
  (call_expression
    (identifier)
    (true)
    (true)
  )
)
